--- a/index.html
+++ b/index.html
@@ -14,14 +14,83 @@
             <div class="nav-logo border">
                 <div class="logo"></div>
             </div>
-            <div class="nav-adress">
-                <p>Deliver to</p>
-                <div class="address-icon">
-                    <i class="fa-light fa-location-dot"></i>
-                    <p class="mytext">India</p>
+            <div class="nav-adress mytext border">
+                <p class="add-1">Deliver to</p>
+                <div class="address-icon mytext">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="add-2">India</p>
                 </div>
             </div>
+            <div class="nav-search">
+                <select class="search-select">
+                    <option>All</option>
+                    <option>Null</option>
+                </select>
+                <input placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <div class="nav-signin mytext border">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-second">Account & List</p>
+            </div>
+            <div class="nav-return mytext border">
+                <p><span>Return</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+            <div class="nav-cart mytext border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
+        </div>
 
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-ops">
+                <p>Today's Deals</p>
+                <p>Buy Again</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>  
+            </div>
+            <div class="panel-deals">Shop deals in Electronics</div>
+        </div>
+        <div class="hero-section">
+            <div class="hero-msg">
+                <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.<a> Click here to go to amazon.in</a></p>
+            </div>
+        </div>
+        <div class="shop-section">
+            <div class="box1 box">
+                <div class="box-content">
+                    <h2>Health and Personal Care</h2>
+                    <div class="box-image" style="background-image: url(box1_image.jpg);"></div>
+                    <p>See more</p>
+                </div>
+            </div>
+            <div class="box2 box">
+                <div class="box-content">
+                    <h2>Health and Personal Care</h2>
+                    <div class="box-image" style="background-image: url(box1_image.jpg);"></div>
+                    <p>See more</p>
+            </div>
+            <div class="box3 box">
+                <div class="box-content">
+                    <h2>Health and Personal Care</h2>
+                    <div class="box-image" style="background-image: url(box1_image.jpg);"></div>
+                    <p>See more</p>
+            </div>
+            <div class="box4 box">
+                <div class="box-content">
+                    <h2>Health and Personal Care</h2>
+                    <div class="box-image" style="background-image: url(box1_image.jpg);"></div>
+                    <p>See more</p>
+            </div>
         </div>
     </header>
 </body>
