--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
             <div class="logo"></div>
 
         </div>
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Conditions of Use</a>
+                <a>Privacy Notice</a>
+                <a>Your Ads Privacy Choices</a>
+            </div>
+            <div class="copy-right">
+                © 1996-2023, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
     </footer>
 </body>
 </html>
